<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="com.example.mihai.scoretracker.Team">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:gravity="center_horizontal"
            android:text="@string/team_title"
            android:textSize="25sp"
            android:contentDescription="@string/team_title"/>

        <EditText
            android:id="@+id/first_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/firstTeam_hint"
            android:contentDescription="@string/firstTeam_hint"/>

        <EditText
            android:id="@+id/second_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/secondTeam_hint"
            android:contentDescription="@string/secondTeam_hint"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:onClick="trackButton"
            android:text="@string/button_track"
            android:textSize="20sp"
            android:contentDescription="@string/button_track"/>

    </LinearLayout>

</ScrollView>
